--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
+  background-image: url('https://img.freepik.com/free-photo/grunge-paint-background_1409-1337.jpg?w=2000');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
